# delivery/http/dto/response/auth.go
@@ -82,20 +82,3 @@ type CompleteProfileRegistrationResponse struct {
 	ExpiresIn    int                                `json:"expires_in"`
 }
 
-type CompleteRegistrationProfile struct {
-	FirstName string `json:"first_name"`
-	LastName  string `json:"last_name"`
-}
-
-type CompleteRegistrationResponse struct {
-	UserID  uuid.UUID                   `json:"user_id"`
-	Email   string                      `json:"email"`
-	Status  string                      `json:"status"`
-	Message string                      `json:"message"`
-	Profile CompleteRegistrationProfile `json:"profile"`
-
-	AccessToken  *string `json:"access_token,omitempty"`
-	RefreshToken *string `json:"refresh_token,omitempty"`
-	TokenType    *string `json:"token_type,omitempty"`
-	ExpiresIn    *int    `json:"expires_in,omitempty"`
-}
